--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.2.8",
-    "next": "12.1.0",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@qsalatiel/eslint-config-typescript": "^1.0.1",
-    "@qsalatiel/prettier-config": "^1.0.2",
+    "@qsalatiel/eslint-config-typescript": "^1.1.3",
+    "@qsalatiel/prettier-config": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.0.0-beta.13",
